Set z-index for add button to ensure it remains clickable when its position is set to fixed due to scrolling past the filters div. Fixes #638.

--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -106,6 +106,7 @@
   &.fixed {
     position: fixed;
     top: 30px;
+    z-index: 1;
   }
 }
 
